# Coro

./: .gitignore  CMakeLists.txt
include/coro/: coro.hpp  task.hpp  task_awaiter.hpp
test/: CMakeLists.txt  generator_test.cpp  tast_test.cpp
